--- a/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/values.yaml
@@ -70,6 +70,10 @@ orderer:
   #Eg. address: orderer1.test.blockchaincloudpoc.com:443
   address: orderer1.test.blockchaincloudpoc.com:443
 
+healthCheck: 
+  retries: 20
+  sleepTimeAfterError: 15
+
 labels:
   service: []
   pvc: []
