--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/requirements.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/requirements.yaml
@@ -5,3 +5,10 @@ dependencies:
     tags:
       - storage
     version: ~1.0.0
+  - name: fabric-catools
+    alias: catools
+    repository: "file://../fabric-catools"
+    tags:
+      - catools
+    version: ~1.0.0
+    condition: settings.generateCertificates
