--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
@@ -44,10 +44,35 @@ global:
     #Eg. externalUrlSuffix: test.blockchaincloudpoc.com
     externalUrlSuffix: test.blockchaincloudpoc.com
 
-labels:
-  service: []
-  pvc: []
-  deployment: []
+catools:
+  orgData:
+    #Provide organization's name in lowercases
+    #Eg. orgName: supplychain 
+    orgName: supplychain
+    #Provide organization's type (orderer or peer)
+    #Eg. component_type: orderer
+    type:
+    #Provide organization's subject
+    #Eg. "O=Orderer,L=51.50/-0.13/London,C=GB"
+    componentSubject:
+    #Provide organization's subject
+    #Eg. "O=Orderer,L=51.50/-0.13/London,C=GB"
+    certSubject:
+    #Provide organization's country
+    #Eg. UK
+    componentCountry: UK
+    #Provide organization's state
+    #Eg. London
+    componentState: London
+    #Provide organization's location
+    #Eg. Lodon
+    componentLocation: Lodon
+
+  #Provide orderer's names
+  orderers:
+    - orderer1   
+    - orderer2 
+    - orderer3
 
 # HLF Network Version
 network:
@@ -143,6 +168,22 @@ config:
       # Provide the requests cpu for node
       # Eg. cpu: 0.25
         cpu: 0.25
+
+settings:
+  # Flag to ensure the certificates configmaps are removed on helm uninstall
+  removeConfigMapsOnDelete: true
+  # Flag to ensure the certificates secrets are removed on helm uninstall
+  removeCertsOnDelete: true
+  # Flag indicating the creation of certificates. This flag must be set to true when installing the first orderer and false in the others.
+  generateCertificates: true
+
+healthCheck: 
+  # The amount of times to retry fetching from/writing to Vault before giving up.
+  # Eg. retries: 10
+  retries: 10
+  # The amount of time in seconds to wait after an error occurs when fetching from/writing to Vault.
+  # Eg. sleepTimeAfterError: 15  
+  sleepTimeAfterError: 15
 
 labels:
   service: []
