--- a/platforms/hyperledger-fabric/charts/fabric-peernode/requirements.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/requirements.yaml
@@ -5,6 +5,13 @@ dependencies:
     tags:
       - storage
     version: ~1.0.0
+  - name: fabric-catools
+    alias: catools
+    repository: "file://../fabric-catools"
+    tags:
+      - catools
+    version: ~1.0.0
+    condition: settings.generateCertificates
   - name: fabric-cli
     alias: cli
     repository: "file://../fabric-cli"
