--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
@@ -12,6 +12,35 @@ global:
     provider: "none"
     externalUrlSuffix: carrier-net
 
+catools:
+  orgData:
+    orgName: carrier
+    type: peer
+    componentSubject: O=Carrier,OU=Carrier,L=51.50/-0.13/London,C=GB
+    certSubject: O=Carrier/OU=Carrier/L=51.50,-0.13,London/C=GB
+    componentCountry: GB
+    componentState: London
+    componentLocation: London
+
+  peers:
+    - peer0-carrier
+
+  users: 
+    usersList:
+      - user:
+        identity: user1
+        attributes:
+        - key: "hf.Revoker"
+          value: "true"
+      - user:
+        identity: user2
+        attributes:
+        - key: "hf.Revoker"
+          value: "true"
+    usersIdentities: 
+      - user1
+      - user2
+
 cli:
   enabled: true
   orderer:
@@ -32,3 +61,8 @@ peer:
   builder: hyperledger/fabric-ccenv:2.5.4
   couchdb:
     username: carrier-user
+
+settings:
+  removeConfigMapsOnDelete: true
+  removeCertsOnDelete: true
+  generateCertificates: true
