--- a/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
@@ -78,7 +78,6 @@ spec:
 {{- if eq .Values.global.vault.type "hashicorp" }}
 
           # Calling a function to retrieve the vault token.
-          echo "------------ ${VAULT_ADDR}----------------"
           vaultBevelFunc "init"
 
           function getOrdererTlsSecret {
@@ -87,9 +86,14 @@ spec:
        
             echo "Getting Orderer TLS certificates from Vault using key $vault_secret_key"
             vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
-
-            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              ORDERER_TLS_SECRET=true
+            else
+              ORDERER_TLS_SECRET=false
+            fi
           }
 
           ###############################################################################
@@ -100,57 +104,92 @@ spec:
 
             echo "Getting MSP certificates from Vault."
             vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
+              CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
+              KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
+              SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
+              TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-            ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-            CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-            KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-            SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-            TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              ADMIN_MSP_SECRET=true
+            else
+              ADMIN_MSP_SECRET=false
+            fi     
           }
 
 {{- else }}
 
           function getOrdererTlsSecret {
             KEY=$1
-            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.cacrt}" | base64 -d > ${OUTPUT_PATH}/ca.crt
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }}  -o json > /dev/null 2>&1
+            if [ $? -eq 0 ]; then
+              kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.cacrt}" | base64 -d > ${OUTPUT_PATH}/ca.crt
+              ORDERER_TLS_SECRET=true
+            else
+              ORDERER_TLS_SECRET=false
+            fi
           }
 
           function getAdminMspSecret {
             KEY=$1
             KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
+            if  [ "$KUBENETES_SECRET" = "" ]; then
+              ADMIN_MSP_SECRET=false
+            else
+              ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
+              CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
+              KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
+              SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
+              TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-            ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
-            CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
-            KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
-            SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
-            TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt               
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt   
+              ADMIN_MSP_SECRET=true
+            fi            
           }
 
 {{- end }} 
 
-          OUTPUT_PATH="${MOUNT_PATH}/orderer/tls"
-          mkdir -p ${OUTPUT_PATH}
-          getOrdererTlsSecret orderer-tls
+          COUNTER=1
+          while [ "$COUNTER" -le {{ $.Values.healthCheck.retries }} ]
+          do
+            OUTPUT_PATH="${MOUNT_PATH}/orderer/tls"
+            mkdir -p ${OUTPUT_PATH}
+            getOrdererTlsSecret orderer-tls
 
-          OUTPUT_PATH="${MOUNT_PATH}/admin/msp"
-          mkdir -p ${OUTPUT_PATH}/admincerts
-          mkdir -p ${OUTPUT_PATH}/cacerts
-          mkdir -p ${OUTPUT_PATH}/keystore
-          mkdir -p ${OUTPUT_PATH}/signcerts
-          mkdir -p ${OUTPUT_PATH}/tlscacerts
-          getAdminMspSecret admin-msp  
+            OUTPUT_PATH="${MOUNT_PATH}/admin/msp"
+            mkdir -p ${OUTPUT_PATH}/admincerts
+            mkdir -p ${OUTPUT_PATH}/cacerts
+            mkdir -p ${OUTPUT_PATH}/keystore
+            mkdir -p ${OUTPUT_PATH}/signcerts
+            mkdir -p ${OUTPUT_PATH}/tlscacerts
+            getAdminMspSecret admin-msp  
+
+            if [ "$ORDERER_TLS_SECRET" = "true" ] && [ "$ADMIN_MSP_SECRET" = "true" ]
+            then
+              echo "Peer certificates have been obtained correctly"
+              break
+            else
+              echo "Peer certificates have not been obtained, sleeping for {{ $.Values.healthCheck.sleepTimeAfterError }}"
+              sleep {{ $.Values.healthCheck.sleepTimeAfterError }}
+              COUNTER=`expr "$COUNTER" + 1`
+            fi
+          done
+
+          if [ "$COUNTER" -gt {{ $.Values.healthCheck.retries }} ]
+          then
+            echo "Retry attempted `expr $COUNTER - 1` times, The peer certificates have not been obtained."
+            exit 1
+          fi
 
         volumeMounts:
         - name: certificates
