--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/node-statefulset.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/node-statefulset.yaml
@@ -150,6 +150,7 @@ spec:
         args:
         - |-
           #!/usr/bin/env sh
+
 {{- if eq .Values.global.vault.type "hashicorp" }}
           . /scripts/bevel-vault.sh
 
@@ -162,14 +163,19 @@ spec:
        
             echo "Getting TLS certificates from Vault."
             vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
-
-            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-            TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
-            TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
-            
-            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-            echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-            echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+              TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
+              TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
+              
+              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              ORDERER_TLS_SECRET=true
+            else
+              ORDERER_TLS_SECRET=false
+            fi
           }
 
           function getOrdererMspSecret {
@@ -178,67 +184,96 @@ spec:
 
             echo "Getting MSP certificates from Vault."
             vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
+              CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
+              KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
+              SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
+              TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-            ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-            CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-            KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-            SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-            TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              ORDERER_MSP_SECRET=true
+            else
+              ORDERER_MSP_SECRET=false
+            fi  
           }
 
 {{- else }}
-
           function getOrdererTlsSecret {
             KEY=$1
             KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
-
-            TLS_CA_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacrt'  | base64 -d)
-            TLS_SERVER_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
-            TLS_SERVER_KEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
-            
-            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-            echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-            echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
-
+            if  [ "$KUBENETES_SECRET" = "" ]; then
+              ORDERER_TLS_SECRET=false
+            else
+              TLS_CA_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacrt'  | base64 -d)
+              TLS_SERVER_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
+              TLS_SERVER_KEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
+              
+              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              ORDERER_TLS_SECRET=true
+            fi
           }
 
           function getOrdererMspSecret {
-            KEY=$1
+            KEY=$1                       
             KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
+            if  [ "$KUBENETES_SECRET" = "" ]; then
+              ORDERER_MSP_SECRET=false
+            else
+              ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
+              CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
+              KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
+              SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
+              TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-            ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
-            CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
-            KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
-            SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
-            TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
-                   
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              ORDERER_MSP_SECRET=true
+            fi                 
           }
 
 {{- end }} 
-          OUTPUT_PATH="${MOUNT_PATH}/tls"
-          mkdir -p ${OUTPUT_PATH}
-          getOrdererTlsSecret ${ORDERER_NAME}-tls
+          COUNTER=1
+          while [ "$COUNTER" -le {{ $.Values.healthCheck.retries }} ]
+          do
+            OUTPUT_PATH="${MOUNT_PATH}/tls"
+            mkdir -p ${OUTPUT_PATH}
+            getOrdererTlsSecret ${ORDERER_NAME}-tls
 
-          OUTPUT_PATH="${MOUNT_PATH}/msp"
-          mkdir -p ${OUTPUT_PATH}/admincerts
-          mkdir -p ${OUTPUT_PATH}/cacerts
-          mkdir -p ${OUTPUT_PATH}/keystore
-          mkdir -p ${OUTPUT_PATH}/signcerts
-          mkdir -p ${OUTPUT_PATH}/tlscacerts
-          getOrdererMspSecret ${ORDERER_NAME}-msp
-        
+            OUTPUT_PATH="${MOUNT_PATH}/msp"
+            mkdir -p ${OUTPUT_PATH}/admincerts
+            mkdir -p ${OUTPUT_PATH}/cacerts
+            mkdir -p ${OUTPUT_PATH}/keystore
+            mkdir -p ${OUTPUT_PATH}/signcerts
+            mkdir -p ${OUTPUT_PATH}/tlscacerts
+            getOrdererMspSecret ${ORDERER_NAME}-msp
+
+            if [ "$ORDERER_TLS_SECRET" = "true" ] && [ "$ORDERER_MSP_SECRET" = "true" ]
+            then
+              echo "Orderer certificates have been obtained correctly"
+              break
+            else
+              echo "Orderer certificates have not been obtained, sleeping for {{ $.Values.healthCheck.sleepTimeAfterError }}"
+              sleep {{ $.Values.healthCheck.sleepTimeAfterError }}
+              COUNTER=`expr "$COUNTER" + 1`
+            fi
+          done
+
+          if [ "$COUNTER" -gt {{ $.Values.healthCheck.retries }} ]
+          then
+            echo "Retry attempted `expr $COUNTER - 1` times, Orderer certificates have not been obtained."
+            exit 1
+          fi   
         volumeMounts:
         - name: certificates
           mountPath: /secret
