--- a/platforms/hyperledger-fabric/charts/fabric-peernode/templates/node-statefulset.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/templates/node-statefulset.yaml
@@ -77,6 +77,7 @@ spec:
         args:
         - |-
           #!/usr/bin/env sh
+
 {{- if eq .Values.global.vault.type "hashicorp" }}
           . /scripts/bevel-vault.sh
 
@@ -84,105 +85,149 @@ spec:
           vaultBevelFunc "init"
 
           function getPeerTlsSecret {
-            KEY=$1
-            KEY_FORMATTED=$(echo $KEY | tr - /)
-       
-
-            echo "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+            KEY=$1/tls
+      
             echo "Getting TLS certificates from Vault."
-            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
-
-            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-            TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
-            TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
-            
-            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-            echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-            echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY}"
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+              TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
+              TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
+              
+              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              PEER_TLS_SECRET=true
+            else
+              PEER_TLS_SECRET=false
+            fi
           }
 
           function getPeerMspSecret {
-            KEY=$1
-            KEY_FORMATTED=$(echo $KEY | tr - /)
+            KEY=$1/msp
 
             echo "Getting MSP certificates from Vault."
-            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY}"
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
+              CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
+              KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
+              SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
+              TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-            ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-            CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-            KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-            SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-            TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              PEER_MSP_SECRET=true
+            else
+              PEER_MSP_SECRET=false
+            fi     
           }
 
           function getCouchDbPass {
             KEY=$1
-            KEY_FORMATTED=$(echo $KEY | tr - /)
-       
-            echo "Getting TLS certificates from Vault."
-            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
 
-            PASSWORD=$(echo ${VAULT_SECRET} | jq -r '.["user"]')
-            echo "${PASSWORD}" >> ${MOUNT_PATH}/user_cred
+            echo "Getting TLS certificates from Vault."
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY}"
+            if [ "$SECRETS_AVAILABLE" == "yes" ]
+            then
+              PASSWORD=$(echo ${VAULT_SECRET} | jq -r '.["user"]')
+              echo "${PASSWORD}" >> ${MOUNT_PATH}/user_cred
+              DB_PASS_SECRET=true
+            else
+              DB_PASS_SECRET=false
+            fi  
           }
  
 {{- else }}
           function getPeerTlsSecret {
-            KEY=$1
+            KEY=$1-tls
             KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
-
-            TLS_CA_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacrt'  | base64 -d)
-            TLS_SERVER_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
-            TLS_SERVER_KEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
-            
-            echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-            echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-            echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+            if  [ "$KUBENETES_SECRET" = "" ]; then
+              PEER_TLS_SECRET=false
+            else
+              TLS_CA_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacrt'  | base64 -d)
+              TLS_SERVER_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
+              TLS_SERVER_KEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
+              
+              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              PEER_TLS_SECRET=true
+            fi
           }
 
           function getPeerMspSecret {
-            KEY=$1
+            KEY=$1-msp
             KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
+            if  [ "$KUBENETES_SECRET" = "" ]; then
+              PEER_MSP_SECRET=false
+            else
+              ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
+              CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
+              KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
+              SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
+              TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-            ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
-            CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
-            KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
-            SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
-            TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
-
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
-                                     
+              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              PEER_MSP_SECRET=true
+            fi
+                                      
           }
 
           function getCouchDbPass {
             KEY=$1
-            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.user}" | base64 -d >> ${MOUNT_PATH}/user_cred
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }}  -o json > /dev/null 2>&1
+            if [ $? -eq 0 ]; then
+              kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.user}" | base64 -d >> ${MOUNT_PATH}/user_cred
+              DB_PASS_SECRET=true
+            else
+              DB_PASS_SECRET=false
+            fi     
           }
-
 {{- end }} 
-          OUTPUT_PATH="${MOUNT_PATH}/tls"
-          mkdir -p ${OUTPUT_PATH}
-          getPeerTlsSecret ${PEER_NAME}-tls
 
-          OUTPUT_PATH="${MOUNT_PATH}/msp"
-          mkdir -p ${OUTPUT_PATH}/admincerts
-          mkdir -p ${OUTPUT_PATH}/cacerts
-          mkdir -p ${OUTPUT_PATH}/keystore
-          mkdir -p ${OUTPUT_PATH}/signcerts
-          mkdir -p ${OUTPUT_PATH}/tlscacerts
-          getPeerMspSecret ${PEER_NAME}-msp
+          COUNTER=1
+          while [ "$COUNTER" -le {{ $.Values.cli.healthCheck.retries }} ]
+          do
+            OUTPUT_PATH="${MOUNT_PATH}/tls"
+            mkdir -p ${OUTPUT_PATH}
+            getPeerTlsSecret ${PEER_NAME}
 
-          getCouchDbPass couchdb
+            OUTPUT_PATH="${MOUNT_PATH}/msp"
+            mkdir -p ${OUTPUT_PATH}/admincerts
+            mkdir -p ${OUTPUT_PATH}/cacerts
+            mkdir -p ${OUTPUT_PATH}/keystore
+            mkdir -p ${OUTPUT_PATH}/signcerts
+            mkdir -p ${OUTPUT_PATH}/tlscacerts
+            getPeerMspSecret ${PEER_NAME}
+
+            getCouchDbPass couchdb
+
+            if [ "$PEER_TLS_SECRET" = "true" ] && [ "$PEER_MSP_SECRET" = "true" ] && [ "$DB_PASS_SECRET" = "true" ]
+            then
+              echo "Peer certificates have been obtained correctly"
+              break
+            else
+              echo "Peer certificates have not been obtained, sleeping for {{ $.Values.cli.healthCheck.sleepTimeAfterError }}"
+              sleep {{ $.Values.cli.healthCheck.sleepTimeAfterError }}
+              COUNTER=`expr "$COUNTER" + 1`
+            fi
+          done
+
+          if [ "$COUNTER" -gt {{ $.Values.cli.healthCheck.retries }} ]
+          then
+            echo "Retry attempted `expr $COUNTER - 1` times, The peer certificates have not been obtained."
+            exit 1
+          fi
 
         volumeMounts:
         {{ if .Values.global.vault.tls  }}
