--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
@@ -12,6 +12,21 @@ global:
     provider: none
     externalUrlSuffix: supplychain-net
 
+catools:
+  orgData:
+    orgName: supplychain
+    type: orderer
+    componentSubject: O=Orderer,L=51.50/-0.13/London,C=GB
+    certSubject: O=Orderer/L=51.50,-0.13,London/C=GB
+    componentCountry: UK
+    componentState: London
+    componentLocation: London
+  
+  orderers:
+    - orderer1
+    - orderer2
+    - orderer3
+
 network:
   version: 2.5.4
 
@@ -25,3 +40,8 @@ orderer:
 
 consensus:
   name: raft
+
+settings:
+  removeConfigMapsOnDelete: true
+  removeCertsOnDelete: true
+  generateCertificates: true
