--- a/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/orderer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/orderer.yaml
@@ -17,8 +17,23 @@ global:
     provider: haproxy
     externalUrlSuffix: test.yourdomain.com
 
+catools:
+  orgData:
+    orgName: supplychain
+    type: orderer
+    componentSubject: O=Orderer,L=51.50/-0.13/London,C=GB
+    certSubject: O=Orderer/L=51.50,-0.13,London/C=GB
+    componentCountry: UK
+    componentState: London
+    componentLocation: London
+  
+  orderers:
+    - orderer1
+    - orderer2
+    - orderer3
+
 network:
-  version: 2.5.4
+  version: 2.2.2
 
 orderer:
   logLevel: info
@@ -28,3 +43,8 @@ orderer:
 
 consensus:
   name: raft
+
+settings:
+  removeConfigMapsOnDelete: true
+  removeCertsOnDelete: true
+  generateCertificates: true
