--- a/platforms/hyperledger-fabric/charts/values/proxy-and-vault/peerOrganization/peer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/proxy-and-vault/peerOrganization/peer.yaml
@@ -17,12 +17,41 @@ global:
     provider: haproxy
     externalUrlSuffix: test.yourdomain.com
 
+catools:
+  orgData:
+    orgName: carrier
+    type: peer
+    componentSubject: O=Carrier,OU=Carrier,L=51.50/-0.13/London,C=GB
+    certSubject: O=Carrier/OU=Carrier/L=51.50,-0.13,London/C=GB
+    componentCountry: GB
+    componentState: London
+    componentLocation: London
+
+  peers:
+    - peer0-carrier
+
+  users: 
+    usersList:
+      - user:
+        identity: user1
+        attributes:
+        - key: "hf.Revoker"
+          value: "true"
+      - user:
+        identity: user2
+        attributes:
+        - key: "hf.Revoker"
+          value: "true"
+    usersIdentities: 
+      - user1
+      - user2
+
 cli:
   enabled: true
   orderer:
     address: orderer1.test.yourdomain.com:443
   network:
-    version: 2.5.4
+    version: 2.2.2
   peer:
     localMspId: carrierMSP
     tlsStatus: true
@@ -37,3 +66,8 @@ peer:
   builder: hyperledger/fabric-ccenv:2.5.4
   couchdb:
     username: carrier-user
+
+settings:
+  removeConfigMapsOnDelete: true
+  removeCertsOnDelete: true
+  generateCertificates: true
